--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <i class="fab fa-tiktok"></i>
                 <p>Tiktok</p>
             </a>
-            <a href="ressources/cv_sib.pdf">
+            <a href="https://www.linkedin.com/in/sibylle-simon-barboux/">
                 <i class="fas fa-user"></i>
-                <p>Mon CV</p>
+                <p>LinkedIn</p>
             </a>
         </header>
         <div class="content" id="content_main">
@@ -90,19 +90,21 @@
                                 <li>Une activité ?</li>
                                 <li class="mine">Scoute depuis mes 7 ans !</li>
                                 <li>Des sports que tu as fait ?</li>
-                                <li class="mine">natation, cirque, danse, badminton, chorale, voile, scoutisme...</li>
+                                <li class="mine">natation, cirque, danse, badminton, voile...</li>
                                 <li>Tes centres d'intérêts ?</li>
                                 <li class="mine">voile, voyages, évènements sportifs ou étudiants, automobile, photographie, réseaux sociaux, chant et arts de la scène</li>
                                 <li>Ta vision professionnelle ?</li>
                                 <li class="mine">hôtellerie, ressources humaines, marketing & communication, ou relations internationales</li>
                                 <li>Une addiction ?  (modérées of course) 🤪</li>
                                 <li class="mine"> le soleil, le café et les réseaux sociaux</li>
-                                <li>Un dernier mot ?</li>
-                                <li class="mine">"quand on veut, on peut", et "on est pas en sucre"</li>
+                                <li>Un proverbe ?</li>
+                                <li class="mine">"quand on veut, on peut"</li>
+                                <li>Une citation ?</li>
+                                <li class="mine">"Vous devez être le changement que vous souhaitez voir dans le monde" - Mahatma Gandhi</li>
                             </ol>
                         </div>
                     </div>
-                    <a href="#">
+                    <a href="https://www.messenger.com/t/100010187892505">
                         <p>Me contacter</p>
                         <i class="fas fa-external-link-alt"></i>
                     </a>
