--- a/index.html
+++ b/index.html
@@ -100,13 +100,22 @@
                                 <li>Ton âge ?</li>
                                 <li class="mine">19 ans, je suis née le 20 août 2002</li>
                                 <li>D'où viens-tu ?</li>
-                                <li class="mine">Versailles mais Bretonne dans le coeur</li>
+                                <li class="mine">De Versailles mais je suis Bretonne dans le coeur</li>
                                 <li>Des frère(s) et soeur(s) ?</li>
                                 <li class="mine">Je suis la dernière d'une fraterie de 4</li>
                                 <li>Une activité ?</li>
                                 <li class="mine">Scoute depuis mes 7 ans !</li>
-                                <li>Des sports que tu as fait ?</li>
-                                <li class="mine">natation, cirque, danse, badminton, voile...</li>
+                                <li class="reply">
+                                    <span class="label">
+                                        <i class="fas fa-reply"></i>
+                                        Vous avez répondu
+                                    </span>
+                                    <span class="from">Scoute depuis mes 7 ans !</span>
+                                    <span class="text">
+                                        Woaw ! 🦊 et des sports que tu as fait ?
+                                    </span>
+                                </li>
+                                <li class="mine">de la natation, du cirque, de la danse, du badminton, de la voile...</li>
                                 <li>Tes centres d'intérêts ?</li>
                                 <li class="mine">voile, voyages, évènements sportifs ou étudiants, automobile, photographie, réseaux sociaux, chant et arts de la scène</li>
                                 <li>Ta vision professionnelle ?</li>
@@ -176,7 +185,7 @@
                         </div>
                         <div class="row">
                             <div class="col date">
-                                <p>2021</p>
+                                <p>2020 - 2021</p>
                             </div>
                             <div class="col">
                                 <p>Déléguée BIB1</p>
@@ -244,16 +253,7 @@
                                     <img src="ressources/img/sib_scout.jpg" alt="Prise en scoutisme">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="ressources/img/sib_light.jpg" alt="Prise de face">
-                                </div>
-                                <div class="swiper-slide">
                                     <img src="ressources/img/sib_navy.jpg" alt="Pull Navy">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="ressources/img/sib_picture.jpg" alt="Avec appareil">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="ressources/img/sib_dress.jpg" alt="Prise face">
                                 </div>
                             </div>
                             <div class="swiper-button-next"></div>
@@ -269,8 +269,7 @@
                 Made by NicolasVaillant
             </a>
             <a class="button-to-author" href="mailto:contact@nicolasvaillant.net">
-                <i class="fas fa-at"></i>
-                Me contacter
+                contact@nicolasvaillant.net
             </a>
         </div>
     </main>
