Final v/1.2 Vidéo update

--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
                         </a>
                     </div>
                 </div>
+                <div class="col yt">
+                    <h1>Vidéo de présentation</h1>
+                    <hr>
+                    <div class="video--loading">
+                        <p>Vidéo bientôt disponible.</p>
+                        <div class="spinner"></div>
+                    </div>
+<!--                    <iframe width="560" height="315"-->
+<!--                            src="https://www.youtube.com/embed/"-->
+<!--                            title="YouTube video player"-->
+<!--                            frameborder="0"-->
+<!--                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
+<!--                            allowfullscreen></iframe>-->
+                </div>
                 <div class="col" id="qs">
                     <h1>Qui suis-je ?</h1>
                     <hr>
