Final v/2.0 Vidéo update

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                         <p>Vidéo bientôt disponible.</p>
                         <div class="spinner"></div>
                     </div>
-<!--                    <iframe width="560" height="315"-->
-<!--                            src="https://www.youtube.com/embed/"-->
-<!--                            title="YouTube video player"-->
-<!--                            frameborder="0"-->
-<!--                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
-<!--                            allowfullscreen></iframe>-->
+                    <iframe width="1312" height="602"
+                            src="https://www.youtube.com/embed/OIQ8DnN3cF4"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                 </div>
                 <div class="col" id="qs">
                     <h1>Qui suis-je ?</h1>
