--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         Je pratique la photographie depuis un peu plus de 4 ans et je m'enseigne peu à peu à la vidéo, compétence que ce que j'aimerai développer et améliorer en intégrant la Fédé. Je mannie également très bien Canva ainsi que quelques petits logiciels de montage. Me considérant également assez habile avec les réseaux sociaux, je pense pouvoir être d'un réel soutient au pôle communication de la Fédé. J'avais par ailleurs intégré le pôle communication de ma liste l'année dernière, ce qui me donne une petite expérience sur ce dernier.
                         <br>
                         <br>
-                        Il me semble que mes 2 années à la Navy en tant que pôle sponsor et Vice-Présidente, m'ont aussi appris à bien connaître le monde associatif de l'IESEG et à développer certaines compétences que j'avais déjà aquise auparavent, comme la cohésion d'équipe ou la communication interne.
+                        Je pense que mes 2 années à la Navy en tant que pôle sponsor et Vice-Présidente, m'ont aussi appris à bien connaître le monde associatif de l'IESEG et à développer certaines compétences que j'avais déjà aquise auparavent, comme la cohésion d'équipe ou la communication interne.
                         <br>
                         <br>
                         Enfin, il est souvent dit de moi que je suis une personne dynamique, joviale, dévouée et serviable, et  je saurais apporter du soleil et de la joie de vivre à l'équipe !
